# ethereum-dev-rust

./: .env.example  Cargo.toml  README.md
abi/: IERC721.json
examples/: connect_mysql.rs  subscribe_logs.rs  subscribe_logs_by_block_number.rs
src/: lib.rs  main.rs
src/database/: connection.rs  constants.rs  ethereum_tables.rs  mod.rs
src/filter/: filter_logs.rs  mod.rs
src/handle/: erc20_transfer_event.rs  erc721_transfer_event.rs  handle_config.rs  handle_logs.rs  mod.rs
src/token/: erc20.rs  erc721.rs  mod.rs  weth.rs
src/utils/: custom_provider.rs  mod.rs  utils.rs
tests/: test_batch.rs  test_custom_provider.rs  test_erc20.rs  test_erc721.rs  test_multicall.rs  test_mysql.rs  test_transfer_eth.rs
tests/common/: mod.rs
